<resources>
    <string name="app_name">Quizzon</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="start">Start</string>
    <string name="easy">Easy</string>
    <string name="medium">medium</string>
    <string name="hard">Hard</string>
    <string name="medium2">Medium</string>
    <string name="hard2">Hard</string>
    <string name="difficulty">Difficulty</string>
    <string name="easylevelbg">easylevelbg</string>
    <string name="level_easy">LEVEL - EASY</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="finish">Finish</string>
    <string name="level_medium">Level - Medium</string>
    <string name="level_hard">Level - HARD</string>
    <string name="congratulations">Congratulations ! %1$s</string>
</resources>