<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/mainbg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#E7E7E7"
        android:background="@drawable/apptextbg"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#C8C4C4"
        app:cardCornerRadius="40dp"
        android:padding="10dp"
        android:elevation="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#BFBDBD"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:textSize="32sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:paddingBottom="6dp">

            </TextView>
            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textColor="#616060"
                android:textStyle="normal">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:hint="@string/enter_your_name"
                    android:textColor="#424242"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbgoval"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#7B4BEC"
                android:padding="12dp"
                android:text="@string/start"
                android:textStyle="bold"
                app:rippleColor="#070707" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>



</androidx.appcompat.widget.LinearLayoutCompat>